examples/errors/duplicate.stlc
x : Int
x = 5

x : Int
x = 6
